// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`explorer/pagerankTable/TableRow depth parameter changes the color, but not the indentation 1`] = `
Object {
  "buttonStyle": Object {
    "marginLeft": 20,
    "marginRight": 5,
  },
  "depth": 0,
  "trClassName": "hoverHighlight_1d3gwos",
  "trStyle": Object {
    "backgroundImage": "linear-gradient(to top, hsla(150,100%,28%,0), hsla(150,100%,28%,0)), linear-gradient(to top, #D8E1E8, #D8E1E8)",
  },
}
`;

exports[`explorer/pagerankTable/TableRow depth parameter changes the color, but not the indentation 2`] = `
Object {
  "buttonStyle": Object {
    "marginLeft": 20,
    "marginRight": 5,
  },
  "depth": 1,
  "trClassName": "hoverHighlight_1d3gwos",
  "trStyle": Object {
    "backgroundImage": "linear-gradient(to top, hsla(150,100%,28%,0.09999999999999998), hsla(150,100%,28%,0.09999999999999998)), linear-gradient(to top, #D8E1E8, #D8E1E8)",
  },
}
`;

exports[`explorer/pagerankTable/TableRow depth parameter changes the color, but not the indentation 3`] = `
Object {
  "buttonStyle": Object {
    "marginLeft": 20,
    "marginRight": 5,
  },
  "depth": 2,
  "trClassName": "hoverHighlight_1d3gwos",
  "trStyle": Object {
    "backgroundImage": "linear-gradient(to top, hsla(150,100%,28%,0.18999999999999995), hsla(150,100%,28%,0.18999999999999995)), linear-gradient(to top, #D8E1E8, #D8E1E8)",
  },
}
`;

exports[`explorer/pagerankTable/TableRow indent parameter changes the button indentation 1`] = `
Object {
  "buttonStyle": Object {
    "marginLeft": 5,
    "marginRight": 5,
  },
  "indent": 0,
  "trClassName": "hoverHighlight_1d3gwos",
  "trStyle": Object {
    "backgroundImage": "linear-gradient(to top, hsla(150,100%,28%,0.2709999999999999), hsla(150,100%,28%,0.2709999999999999)), linear-gradient(to top, #D8E1E8, #D8E1E8)",
  },
}
`;

exports[`explorer/pagerankTable/TableRow indent parameter changes the button indentation 2`] = `
Object {
  "buttonStyle": Object {
    "marginLeft": 20,
    "marginRight": 5,
  },
  "indent": 1,
  "trClassName": "hoverHighlight_1d3gwos",
  "trStyle": Object {
    "backgroundImage": "linear-gradient(to top, hsla(150,100%,28%,0.2709999999999999), hsla(150,100%,28%,0.2709999999999999)), linear-gradient(to top, #D8E1E8, #D8E1E8)",
  },
}
`;

exports[`explorer/pagerankTable/TableRow indent parameter changes the button indentation 3`] = `
Object {
  "buttonStyle": Object {
    "marginLeft": 35,
    "marginRight": 5,
  },
  "indent": 2,
  "trClassName": "hoverHighlight_1d3gwos",
  "trStyle": Object {
    "backgroundImage": "linear-gradient(to top, hsla(150,100%,28%,0.2709999999999999), hsla(150,100%,28%,0.2709999999999999)), linear-gradient(to top, #D8E1E8, #D8E1E8)",
  },
}
`;
